--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   unit_tests:
+    if: ${{ github.event.label.name == 'ok-to-test' }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
