--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -5,16 +5,23 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  label:
+    types:
+      - created
 
 jobs:
   label_check:
-    if: ${{ github.event.label.name != 'ok-to-test' }}
-    uses: actions/github-script@v3
-    with:
-      script: |
-          core.setFailed('missing ok-to-test label')
+    runs-on: ubuntu-latest
+    steps:
+    - name: labels
+      if: ${{ github.event.label.name != 'ok-to-test' }}
+      uses: actions/github-script@v3
+        with:
+          script: |
+              core.setFailed('missing ok-to-test label')
+              
   unit_tests:
-    if: success()
+    needs: label_check
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
