--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: labels
-      if: contains(github.event.pull_request.labels.*.name, 'ok-to-test')
+      if: ${{ contains(github.event.pull_request.labels.*.name, 'ok-to-test') }}
       uses: actions/github-script@v3
       with:
         script: |
-            core.setFailed(github.event.pull_request.labels.*.name)
+            core.setFailed('missing ok-to-test label')
 
   unit_tests:
     needs: label_check
