--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -11,12 +11,15 @@ jobs:
   label_check:
     runs-on: ubuntu-latest
     steps:
-    - name: labels
+    - name: show-labels
+      run: echo `${{ github.event.pull_request.labels.*.name }}`
+      
+    - name: check-labels
       if: ${{ contains(github.event.pull_request.labels.*.name, 'ok-to-test') }}
       uses: actions/github-script@v3
       with:
         script: |
-            core.setFailed({{ github.event.pull_request.labels.*.name }})
+            core.setFailed('missing ok-to-test label')
 
   unit_tests:
     needs: label_check
