--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: show-labels
-      run: echo `${{ github.event.pull_request.labels.*.name }}`
+      run: echo `contains(github.event.pull_request.labels.*.name, 'ok-to-test')`
       
     - name: check-labels
-      if: ${{ contains(github.event.pull_request.labels.*.name, 'ok-to-test') }}
+      if: contains(github.event.pull_request.labels.*.name, 'ok-to-test')
       uses: actions/github-script@v3
       with:
         script: |
