--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -11,11 +11,8 @@ jobs:
   label_check:
     runs-on: ubuntu-latest
     steps:
-    - name: show-labels
-      run: echo `contains(github.event.pull_request.labels.*.name, 'ok-to-test')`
-      
     - name: check-labels
-      if: contains(github.event.pull_request.labels.*.name, 'ok-to-test')
+      if: "!contains(github.event.pull_request.labels.*.name, 'ok-to-test')"
       uses: actions/github-script@v3
       with:
         script: |
