require ok-to-test label for actions (#3)
* require ok-to-test label for actions

* fail on missing label

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -5,9 +5,21 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    types: [opened, labeled, ready_for_review, synchronize]
 
 jobs:
+  label_check:
+    runs-on: ubuntu-latest
+    steps:
+    - name: check-labels
+      if: "!contains(github.event.pull_request.labels.*.name, 'ok-to-test')"
+      uses: actions/github-script@v3
+      with:
+        script: |
+            core.setFailed('missing ok-to-test label')
+
   unit_tests:
+    needs: label_check
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
