--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
     types: [opened, labeled, ready_for_review, synchronize]
-
+jobs:
   unit_tests:
     runs-on: ubuntu-latest
     steps:
