--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: check-labels
-      if: (github.event_name == 'pull_request') && ("!contains(github.event.pull_request.labels.*.name, 'ok-to-test')")
+      if: (github.event_name == 'pull_request') && (contains(github.event.pull_request.labels.*.name, 'ok-to-test') != true)
       uses: actions/github-script@v3
       with:
         script: |
