rework into app and model with basic api routes and env configuration and postgres setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     build:
       context: .
     environment:
-      - PGSQL_PORT=5432
-      - PGSQL_HOSTNAME=sensor-db
+      - DB_PORT=5432
+      - DB_HOST=sensor-db
       - DEBUG=false
     ports:
       - 8080:8080
